# OpenBoard

./: .gitlab-ci.yml  CMakeLists.txt  OpenBoard.pro  libs.pri
ci_scripts/: build.sh  debian-install-deps.sh  fedora-install-deps.sh
cmake/: FindPoppler.cmake
plugins/cffadaptor/: UBCFFAdaptor.pro
resources/: OpenBoard.qrc
resources/etc/: OpenBoard.config
resources/forms/: trapFlash.ui
src/core/: UBApplication.cpp  UBSettings.cpp  UBSettings.h
src/frameworks/: UBPlatformUtils_linux.cpp
src/pdf/: XPDFRenderer.cpp
src/podcast/: podcast.pri
